Rewritten in Node.js with nocto framework, bye bye Java/Vert.x